# spline

./: CMakeLists.txt  LICENSE  Makefile  README.md  plot.gp  plot.gpl  spline.f90  spline_test.f90
